# SRTP2-Project-Starter

./: .gitignore  ReadMe.md
.west/: config
srtp2-project/: west.yml
srtp2-project/app/: CMakeLists.txt  app.overlay  prj.conf
srtp2-project/app/src/: blinky.c  blinky.h  chat.c  chat.h  main.c  nunchuk.c  nunchuk.h  time.c  time.h
srtp2-project/drivers/: CMakeLists.txt
srtp2-project/drivers/input/: CMakeLists.txt  Kconfig
srtp2-project/drivers/input/nunchukng/: CMakeLists.txt  Kconfig
srtp2-project/drivers/input/nunchukng/include/: input_nunchuk.h
srtp2-project/drivers/input/nunchukng/src/: input_nunchuk.c
srtp2-project/dts/bindings/input/: nintendo,nunchukng.yaml
srtp2-project/lib/: CMakeLists.txt  Kconfig
srtp2-project/lib/srtp2/: CMakeLists.txt  Kconfig
srtp2-project/lib/srtp2/include/: srtp2.h
srtp2-project/lib/srtp2/include/srtp2/: types.h
srtp2-project/lib/srtp2/src/: main.c  network.c
srtp2-project/lib/srtp2/src/protocol/: beacon.c  beacon.h  frame.c  frame.h  mpdu.c  mpdu.h  offsets.h
srtp2-project/lib/srtp2/src/service/: config.h  ev.c  msg.c  sv.c  sync.c
srtp2-project/zephyr/: module.yml
